# carelink_follwer_web

./: .env.development  .env.production  .gitignore  LICENSE  README.md  package.json  vite.config.mts
public/: data.json
src/: main.ts  settings.ts
src/composition/: useSugarCalc.ts
src/model/: model-type.ts
src/plugins/: echart.ts
src/service/: dict-service.ts  sugar-service.ts
src/styles/: index.scss  layout.scss
src/utils/: filter.ts  http-client.ts  index.ts  tools.ts
src/views/: Developing.vue  const.ts  index.vue  info.vue
src/views/system/: dict.vue
web-page/: .env.development
web-page/src/directive/: index.ts
web-page/src/layout/: index.ts
web-page/src/service/: dict-service.ts  sugar-service.ts  test-service.ts
web-page/src/utils/: http-client.ts  validator.ts
web-page/src/views/: info.vue
web_page/: .env.dev_local  .env.development  .env.production  .eslintignore  .eslintrc.js  index.html  package.json  tsconfig.json  vite.config.mts
web_page/public/: data.json
web_page/src/: App.vue  main.ts  settings.ts
web_rust_service/: Cargo.toml  note.txt
web_rust_service/config/: development.toml  local.toml  production.toml
web_rust_service/src/: config.rs  main.rs
web_rust_service/src/models/: mod.rs
web_rust_service/src/register/: mod.rs
web_rust_service/src/routes/: api.rs  mod.rs  public.rs  sugar.rs  system.rs  test.rs  user.rs
web_rust_service/src/services/: mod.rs  ns_service.rs  public.rs  sugar_service.rs
web_rust_service/src/test/: mod.rs
web_rust_service/src/utils/: ar2.rs  jwt_token.rs  mail.rs  mod.rs  redis_client.rs  task.rs
web_service/: .dev.env  .gitignore  .prod.env  Redis_Dump_20240919.csv  main.py  note.txt  requirements.txt
web_service/core/: auth.py  config.py  db_core.py  denpends.py  redis_core.py  route_log.py
web_service/models/: __init__.py  beans.py  const.py  error.py  result.py
web_service/register/: __init__.py  cors.py  exception.py  middleware.py  router.py
web_service/router/: public.py  sugar.py  system.py  user.py
web_service/service/: sugarService.py  sysService.py
web_service/test/: test.py  test_cv.py  test_datetime.py  test_forcast.py  test_json.py  test_jwt.py  test_mail.py  test_redis.py  test_server.py  test_validator.py
web_service/utils/: generate_ssl.py  handle_date.py  handle_ip.py  http_utils.py  logutils.py  mail.py  tools.py
(+49 files in other folders)
