[package]
name = "carelink_follower_rust_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
config = "0.15.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["default", "std", "env-filter", "chrono"] }
serde_json = "1.0.145"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
garde = { version = "0.22.0", features = ["full"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
dashmap = "5.5.3"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-cron-scheduler = "*"
reqwest = { version = "0.12.25", features = ["default", "json", "rustls-tls", "cookies"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder", "rustls-tls"] }