[package]
name = "carelink_follower_rust_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["default", "std", "env-filter", "chrono"] }
serde_json = "1.0.147"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.8", features = ["cors"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
garde = { version = "0.22.1", features = ["full"] }
bb8 = "0.9.0"
bb8-redis = "0.26.0"
dashmap = "6.1.0"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-cron-scheduler = "*"
reqwest = { version = "0.12.28", features = ["default", "json", "rustls-tls", "cookies"] }
lettre = { version = "0.11.19", features = ["smtp-transport", "builder", "rustls-tls"] }
chrono-tz = "0.10.4"
regex = "1.12.2"
url = "2.5.8"
sha1 = "0.10.6"